src/parser/generated/Protobuf3Parser.ts
// Generated from ./Protobuf3.g4 by ANTLR 4.13.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import Protobuf3Listener from "./Protobuf3Listener.js";
import Protobuf3Visitor from "./Protobuf3Visitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class Protobuf3Parser extends Parser {
	public static readonly SYNTAX = 1;
	public static readonly IMPORT = 2;
	public static readonly WEAK = 3;
	public static readonly PUBLIC = 4;
	public static readonly PACKAGE = 5;
	public static readonly OPTION = 6;
	public static readonly REPEATED = 7;
	public static readonly ONEOF = 8;
	public static readonly MAP = 9;
	public static readonly INT32 = 10;
	public static readonly INT64 = 11;
	public static readonly UINT32 = 12;
	public static readonly UINT64 = 13;
	public static readonly SINT32 = 14;
	public static readonly SINT64 = 15;
	public static readonly FIXED32 = 16;
	public static readonly FIXED64 = 17;
	public static readonly SFIXED32 = 18;
	public static readonly SFIXED64 = 19;
	public static readonly BOOL = 20;
	public static readonly STRING = 21;
	public static readonly DOUBLE = 22;
	public static readonly FLOAT = 23;
	public static readonly BYTES = 24;
	public static readonly RESERVED = 25;
	public static readonly TO = 26;
	public static readonly MAX = 27;
	public static readonly ENUM = 28;
	public static readonly MESSAGE = 29;
	public static readonly SERVICE = 30;
	public static readonly RPC = 31;
	public static readonly STREAM = 32;
	public static readonly RETURNS = 33;
	public static readonly PROTO3_LIT_SINGLE = 34;
	public static readonly PROTO3_LIT_DOBULE = 35;
	public static readonly SEMI = 36;
	public static readonly EQ = 37;
	public static readonly LP = 38;
	public static readonly RP = 39;
	public static readonly LB = 40;
	public static readonly RB = 41;
	public static readonly LC = 42;
	public static readonly RC = 43;
	public static readonly LT = 44;
	public static readonly GT = 45;
	public static readonly DOT = 46;
	public static readonly COMMA = 47;
	public static readonly COLON = 48;
	public static readonly PLUS = 49;
	public static readonly MINUS = 50;
	public static readonly STR_LIT = 51;
	public static readonly BOOL_LIT = 52;
	public static readonly FLOAT_LIT = 53;
	public static readonly INT_LIT = 54;
	public static readonly IDENTIFIER = 55;
	public static readonly WS = 56;
	public static readonly LINE_COMMENT = 57;
	public static readonly COMMENT = 58;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_proto = 0;
	public static readonly RULE_syntax = 1;
	public static readonly RULE_importStatement = 2;
	public static readonly RULE_packageStatement = 3;
	public static readonly RULE_optionStatement = 4;
	public static readonly RULE_optionName = 5;
	public static readonly RULE_field = 6;
	public static readonly RULE_fieldOptions = 7;
	public static readonly RULE_fieldOption = 8;
	public static readonly RULE_fieldNumber = 9;
	public static readonly RULE_oneof = 10;
	public static readonly RULE_oneofField = 11;
	public static readonly RULE_mapField = 12;
	public static readonly RULE_keyType = 13;
	public static readonly RULE_type_ = 14;
	public static readonly RULE_reserved = 15;
	public static readonly RULE_ranges = 16;
	public static readonly RULE_range_ = 17;
	public static readonly RULE_reservedFieldNames = 18;
	public static readonly RULE_topLevelDef = 19;
	public static readonly RULE_enumDef = 20;
	public static readonly RULE_enumBody = 21;
	public static readonly RULE_enumElement = 22;
	public static readonly RULE_enumField = 23;
	public static readonly RULE_enumValueOptions = 24;
	public static readonly RULE_enumValueOption = 25;
	public static readonly RULE_messageDef = 26;
	public static readonly RULE_messageBody = 27;
	public static readonly RULE_messageElement = 28;
	public static readonly RULE_serviceDef = 29;
	public static readonly RULE_serviceElement = 30;
	public static readonly RULE_rpc = 31;
	public static readonly RULE_constant = 32;
	public static readonly RULE_blockLit = 33;
	public static readonly RULE_emptyStatement = 34;
	public static readonly RULE_ident = 35;
	public static readonly RULE_fullIdent = 36;
	public static readonly RULE_messageName = 37;
	public static readonly RULE_enumName = 38;
	public static readonly RULE_fieldName = 39;
	public static readonly RULE_oneofName = 40;
	public static readonly RULE_mapName = 41;
	public static readonly RULE_serviceName = 42;
	public static readonly RULE_rpcName = 43;
	public static readonly RULE_messageType = 44;
	public static readonly RULE_enumType = 45;
	public static readonly RULE_intLit = 46;
	public static readonly RULE_strLit = 47;
	public static readonly RULE_boolLit = 48;
	public static readonly RULE_floatLit = 49;
	public static readonly RULE_keywords = 50;
	public static readonly literalNames: (string | null)[] = [ null, "'syntax'", 
                                                            "'import'", 
                                                            "'weak'", "'public'", 
                                                            "'package'", 
                                                            "'option'", 
                                                            "'repeated'", 
                                                            "'oneof'", "'map'", 
                                                            "'int32'", "'int64'", 
                                                            "'uint32'", 
                                                            "'uint64'", 
                                                            "'sint32'", 
                                                            "'sint64'", 
                                                            "'fixed32'", 
                                                            "'fixed64'", 
                                                            "'sfixed32'", 
                                                            "'sfixed64'", 
                                                            "'bool'", "'string'", 
                                                            "'double'", 
                                                            "'float'", "'bytes'", 
                                                            "'reserved'", 
                                                            "'to'", "'max'", 
                                                            "'enum'", "'message'", 
                                                            "'service'", 
                                                            "'rpc'", "'stream'", 
                                                            "'returns'", 
                                                            "'\"proto3\"'", 
                                                            "''proto3''", 
                                                            "';'", "'='", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "'<'", "'>'", 
                                                            "'.'", "','", 
                                                            "':'", "'+'", 
                                                            "'-'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "SYNTAX", 
                                                             "IMPORT", "WEAK", 
                                                             "PUBLIC", "PACKAGE", 
                                                             "OPTION", "REPEATED", 
                                                             "ONEOF", "MAP", 
                                                             "INT32", "INT64", 
                                                             "UINT32", "UINT64", 
                                                             "SINT32", "SINT64", 
                                                             "FIXED32", 
                                                             "FIXED64", 
                                                             "SFIXED32", 
                                                             "SFIXED64", 
                                                             "BOOL", "STRING", 
                                                             "DOUBLE", "FLOAT", 
                                                             "BYTES", "RESERVED", 
                                                             "TO", "MAX", 
                                                             "ENUM", "MESSAGE", 
                                                             "SERVICE", 
                                                             "RPC", "STREAM", 
                                                             "RETURNS", 
                                                             "PROTO3_LIT_SINGLE", 
                                                             "PROTO3_LIT_DOBULE", 
                                                             "SEMI", "EQ", 
                                                             "LP", "RP", 
                                                             "LB", "RB", 
                                                             "LC", "RC", 
                                                             "LT", "GT", 
                                                             "DOT", "COMMA", 
                                                             "COLON", "PLUS", 
                                                             "MINUS", "STR_LIT", 
                                                             "BOOL_LIT", 
                                                             "FLOAT_LIT", 
                                                             "INT_LIT", 
                                                             "IDENTIFIER", 
                                                             "WS", "LINE_COMMENT", 
                                                             "COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"proto", "syntax", "importStatement", "packageStatement", "optionStatement", 
		"optionName", "field", "fieldOptions", "fieldOption", "fieldNumber", "oneof", 
		"oneofField", "mapField", "keyType", "type_", "reserved", "ranges", "range_", 
		"reservedFieldNames", "topLevelDef", "enumDef", "enumBody", "enumElement", 
		"enumField", "enumValueOptions", "enumValueOption", "messageDef", "messageBody", 
		"messageElement", "serviceDef", "serviceElement", "rpc", "constant", "blockLit", 
		"emptyStatement", "ident", "fullIdent", "messageName", "enumName", "fieldName", 
		"oneofName", "mapName", "serviceName", "rpcName", "messageType", "enumType", 
		"intLit", "strLit", "boolLit", "floatLit", "keywords",
	];
	public get grammarFileName(): string { return "Protobuf3.g4"; }
	public get literalNames(): (string | null)[] { return Protobuf3Parser.literalNames; }
	public get symbolicNames(): (string | null)[] { return Protobuf3Parser.symbolicNames; }
	public get ruleNames(): string[] { return Protobuf3Parser.ruleNames; }
	public get serializedATN(): number[] { return Protobuf3Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, Protobuf3Parser._ATN, Protobuf3Parser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public proto(): ProtoContext {
		let localctx: ProtoContext = new ProtoContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, Protobuf3Parser.RULE_proto);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 102;
			this.syntax();
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1879048292) !== 0) || _la===36) {
				{
				this.state = 108;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 2:
					{
					this.state = 103;
					this.importStatement();
					}
					break;
				case 5:
					{
					this.state = 104;
					this.packageStatement();
					}
					break;
				case 6:
					{
					this.state = 105;
					this.optionStatement();
					}
					break;
				case 28:
				case 29:
				case 30:
					{
					this.state = 106;
					this.topLevelDef();
					}
					break;
				case 36:
					{
					this.state = 107;
					this.emptyStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public syntax(): SyntaxContext {
		let localctx: SyntaxContext = new SyntaxContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, Protobuf3Parser.RULE_syntax);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 113;
			this.match(Protobuf3Parser.SYNTAX);
			this.state = 114;
			this.match(Protobuf3Parser.EQ);
			this.state = 115;
			_la = this._input.LA(1);
			if(!(_la===34 || _la===35)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 116;
			this.match(Protobuf3Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importStatement(): ImportStatementContext {
		let localctx: ImportStatementContext = new ImportStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, Protobuf3Parser.RULE_importStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 118;
			this.match(Protobuf3Parser.IMPORT);
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===3 || _la===4) {
				{
				this.state = 119;
				_la = this._input.LA(1);
				if(!(_la===3 || _la===4)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
			}

			this.state = 122;
			this.strLit();
			this.state = 123;
			this.match(Protobuf3Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public packageStatement(): PackageStatementContext {
		let localctx: PackageStatementContext = new PackageStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, Protobuf3Parser.RULE_packageStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 125;
			this.match(Protobuf3Parser.PACKAGE);
			this.state = 126;
			this.fullIdent();
			this.state = 127;
			this.match(Protobuf3Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public optionStatement(): OptionStatementContext {
		let localctx: OptionStatementContext = new OptionStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, Protobuf3Parser.RULE_optionStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 129;
			this.match(Protobuf3Parser.OPTION);
			this.state = 130;
			this.optionName();
			this.state = 131;
			this.match(Protobuf3Parser.EQ);
			this.state = 132;
			this.constant();
			this.state = 133;
			this.match(Protobuf3Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public optionName(): OptionNameContext {
		let localctx: OptionNameContext = new OptionNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, Protobuf3Parser.RULE_optionName);
		let _la: number;
		try {
			this.state = 143;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
			case 2:
			case 3:
			case 4:
			case 5:
			case 6:
			case 7:
			case 8:
			case 9:
			case 10:
			case 11:
			case 12:
			case 13:
			case 14:
			case 15:
			case 16:
			case 17:
			case 18:
			case 19:
			case 20:
			case 21:
			case 22:
			case 23:
			case 24:
			case 25:
			case 26:
			case 27:
			case 28:
			case 29:
			case 30:
			case 31:
			case 32:
			case 33:
			case 52:
			case 55:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 135;
				this.fullIdent();
				}
				break;
			case 38:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 136;
				this.match(Protobuf3Parser.LP);
				this.state = 137;
				this.fullIdent();
				this.state = 138;
				this.match(Protobuf3Parser.RP);
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===46) {
					{
					this.state = 139;
					this.match(Protobuf3Parser.DOT);
					this.state = 140;
					this.fullIdent();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, Protobuf3Parser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 146;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 145;
				this.match(Protobuf3Parser.REPEATED);
				}
				break;
			}
			this.state = 148;
			this.type_();
			this.state = 149;
			this.fieldName();
			this.state = 150;
			this.match(Protobuf3Parser.EQ);
			this.state = 151;
			this.fieldNumber();
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===40) {
				{
				this.state = 152;
				this.match(Protobuf3Parser.LB);
				this.state = 153;
				this.fieldOptions();
				this.state = 154;
				this.match(Protobuf3Parser.RB);
				}
			}

			this.state = 158;
			this.match(Protobuf3Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public fieldOptions(): FieldOptionsContext {
		let localctx: FieldOptionsContext = new FieldOptionsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, Protobuf3Parser.RULE_fieldOptions);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 160;
			this.fieldOption();
			this.state = 165;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===47) {
				{
				{
				this.state = 161;
				this.match(Protobuf3Parser.COMMA);
				this.state = 162;
				this.fieldOption();
				}
				}
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public fieldOption(): FieldOptionContext {
		let localctx: FieldOptionContext = new FieldOptionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, Protobuf3Parser.RULE_fieldOption);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 168;
			this.optionName();
			this.state = 169;
			this.match(Protobuf3Parser.EQ);
			this.state = 170;
			this.constant();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public fieldNumber(): FieldNumberContext {
		let localctx: FieldNumberContext = new FieldNumberContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, Protobuf3Parser.RULE_fieldNumber);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 172;
			this.intLit();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public oneof(): OneofContext {
		let localctx: OneofContext = new OneofContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, Protobuf3Parser.RULE_oneof);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 174;
			this.match(Protobuf3Parser.ONEOF);
			this.state = 175;
			this.oneofName();
			this.state = 176;
			this.match(Protobuf3Parser.LC);
			this.state = 182;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4294967294) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 9453587) !== 0)) {
				{
				this.state = 180;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
				case 1:
					{
					this.state = 177;
					this.optionStatement();
					}
					break;
				case 2:
					{
					this.state = 178;
					this.oneofField();
					}
					break;
				case 3:
					{
					this.state = 179;
					this.emptyStatement();
					}
					break;
				}
				}
				this.state = 184;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 185;
			this.match(Protobuf3Parser.RC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public oneofField(): OneofFieldContext {
		let localctx: OneofFieldContext = new OneofFieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, Protobuf3Parser.RULE_oneofField);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 187;
			this.type_();
			this.state = 188;
			this.fieldName();
			this.state = 189;
			this.match(Protobuf3Parser.EQ);
			this.state = 190;
			this.fieldNumber();
			this.state = 195;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===40) {
				{
				this.state = 191;
				this.match(Protobuf3Parser.LB);
				this.state = 192;
				this.fieldOptions();
				this.state = 193;
				this.match(Protobuf3Parser.RB);
				}
			}

			this.state = 197;
			this.match(Protobuf3Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mapField(): MapFieldContext {
		let localctx: MapFieldContext = new MapFieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, Protobuf3Parser.RULE_mapField);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 199;
			this.match(Protobuf3Parser.MAP);
			this.state = 200;
			this.match(Protobuf3Parser.LT);
			this.state = 201;
			this.keyType();
			this.state = 202;
			this.match(Protobuf3Parser.COMMA);
			this.state = 203;
			this.type_();
			this.state = 204;
			this.match(Protobuf3Parser.GT);
			this.state = 205;
			this.mapName();
			this.state = 206;
			this.match(Protobuf3Parser.EQ);
			this.state = 207;
			this.fieldNumber();
			this.state = 212;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===40) {
				{
				this.state = 208;
				this.match(Protobuf3Parser.LB);
				this.state = 209;
				this.fieldOptions();
				this.state = 210;
				this.match(Protobuf3Parser.RB);
				}
			}
